cleanup into one patch: do not mix unrelated X11 Visuals (fdo#33108)

Do not assume that there is just one generic Visual, as today's
XServers are ARGB-capable and cases of both the default depth
and 32bit visuals can happen.

Signed-off-by: Michael Meeks <michael.meeks@novell.com>