vcl/inc/vcl/sysdata.hxx
@@ -122,7 +122,7 @@ struct SystemGraphicsData
     int         nScreen;        // the current screen of the drawable
     int             nDepth;         // depth of said visual
     long            aColormap;      // the colormap being used
-    void*           pRenderFormat;  // render format for drawable
+    void*           pXRenderFormat;  // render format for drawable
 #endif
 };
 
