vcl/unx/source/gdi/salvd.cxx
@@ -68,7 +68,8 @@ SalVirtualDevice* X11SalInstance::CreateVirtualDevice( SalGraphics* pGraphics,
         }
         nDX = (long)w;
         nDY = (long)h;
-        if( !pVDev->Init( GetX11SalData()->GetDisplay(), nDX, nDY, nBitCount, nScreen, pData->hDrawable, pData->pRenderFormat ) )
+        if( !pVDev->Init( GetX11SalData()->GetDisplay(), nDX, nDY, nBitCount, nScreen, pData->hDrawable,
+                static_cast< XRenderPictFormat* >( pData->pXRenderFormat )) )
         {
             delete pVDev;
             return NULL;
@@ -136,7 +137,7 @@ BOOL X11SalVirtualDevice::Init( SalDisplay *pDisplay,
                                 USHORT nBitCount,
                                 int nScreen,
                                 Pixmap hDrawable,
-                                void* pRenderFormatVoid )
+                                XRenderPictFormat* pXRenderFormat )
 {
     SalColormap* pColormap = NULL;
     bool bDeleteColormap = false;
@@ -144,11 +145,10 @@ BOOL X11SalVirtualDevice::Init( SalDisplay *pDisplay,
     pDisplay_               = pDisplay;
     pGraphics_              = new X11SalGraphics();
     m_nScreen               = nScreen;
-    if( pRenderFormatVoid ) {
-        XRenderPictFormat *pRenderFormat = ( XRenderPictFormat* )pRenderFormatVoid;
-        pGraphics_->SetXRenderFormat( pRenderFormat );
-        if( pRenderFormat->colormap )
-            pColormap = new SalColormap( pDisplay, pRenderFormat->colormap, m_nScreen );
+    if( pXRenderFormat ) {
+        pGraphics_->SetXRenderFormat( pXRenderFormat );
+        if( pXRenderFormat->colormap )
+            pColormap = new SalColormap( pDisplay, pXRenderFormat->colormap, m_nScreen );
         else
             pColormap = new SalColormap( nBitCount );
          bDeleteColormap = true;
